# AlgorithmEngineering

./: .gitignore  CMakeLists.txt  compile.sh  ilp_main.cpp  main.cpp  readme.txt  solver  solver.cpp  to_do  trial.cpp
Ex3/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Makefile  Vertex.cpp  Vertex.h  solver  solver.cpp  solver.h  test-min.txt  test.txt  text-c.txt
include/: cluster_graph.h  cplex.h  node.h  node_weight_pair.h  p3.h  p3s_bucket.h  processor.h  verifier.h
kernel/: merge_kernel.py
old_ex1/: solver.cpp  test.txt
old_ex2/: solver.cpp
wce-students/: .~lock.all_cases.csv#  .~lock.all_cases_bug_free.csv#  .~lock.all_cases_optimal.csv#  .~lock.results-2021-05-22-04-15-06.csv#  _solver_branching_2.csv  _solver_optimal.csv  action.csv  all_cases.csv  all_cases_bug_free.csv  all_cases_non_optimal.csv  all_cases_optimal.csv  benchmark-wce-modified.sh  benchmark-wce.sh  compare_branching_action.csv  cplex_with_reduction.csv  cplex_without_reduction.csv  log.txt  prog_out.txt  random  random.csv  random_bf.csv  real.csv  real_.csv  results-2021-05-19-19-46-23.csv  results-2021-05-19-19-46-44.csv  results-2021-05-19-20-08-05.csv  results-2021-05-19-20-08-42.csv  results-2021-05-19-20-11-14.csv  results-2021-05-19-21-08-12.csv  results-2021-05-19-21-12-54.csv  results-2021-05-19-22-33-34.csv  results-2021-05-21-11-00-17.csv  results-2021-05-21-23-37-18.csv  results-2021-05-22-04-15-06.csv  solver_non_optimal.csv  test_input_file
